--- a/index.html
+++ b/index.html
@@ -1,1 +1,60 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Client Side Form Validation - JavaScript</title>
+  <!-- Google Fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;400;700;900&display=swap" rel="stylesheet">
 
+  <!-- Font Awesome -->
+  <script src="https://kit.fontawesome.com/2da043afe8.js" crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+  <div class="container">
+    <form id="form">
+      <div class="title">Get Started</div>
+
+      <!-- user name input -->
+      <div>
+        <label for="username">User Name</label>
+        <i class="fas fa-user"></i>
+        <input type="text" name="username" id="username" placeholder="Ola Oluwa">
+        <i class="fas fa-exclamation-circle"></i>
+        <i class="far fa-check-circle"></i>
+        <div class="error"></div>
+      </div>
+
+      <!-- email input -->
+      <div>
+        <label for="email">Email</label>
+        <i class="far fa-envelope"></i>
+        <input type="email" name="email" id="email" placeholder="Email Here">
+        <i class="fas fa-exclamation-circle"></i>
+        <i class="far fa-check-circle"></i>
+        <div class="error"></div>
+      </div>
+
+      <!-- password input -->
+      <div>
+        <label for="password">Password</label>
+        <i class="fas fa-lock"></i>
+        <input type="password" name="password" id="password" placeholder="Ola Oluwa">
+        <i class="fas fa-exclamation-circle"></i>
+        <i class="far fa-check-circle"></i>
+        <div class="error"></div>
+      </div>
+      <button type="submit" id="submit">Submit</button>
+    </form>
+    
+
+  </div>
+  
+  
+  <script src="main.js"></script>
+</body>
+</html>
