--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
         <label for="username">User Name</label>
         <i class="fas fa-user"></i>
         <input type="text" name="username" id="username" placeholder="Ola Oluwa">
-        <i class="fas fa-exclamation-circle"></i>
-        <i class="far fa-check-circle"></i>
+        <i class="fas fa-exclamation-circle failure-icon"></i>
+        <i class="far fa-check-circle success-icon"></i>
         <div class="error"></div>
       </div>
 
@@ -33,9 +33,9 @@
       <div>
         <label for="email">Email</label>
         <i class="far fa-envelope"></i>
-        <input type="email" name="email" id="email" placeholder="Email Here">
-        <i class="fas fa-exclamation-circle"></i>
-        <i class="far fa-check-circle"></i>
+        <input type="email" name="email" id="email" placeholder="Email">
+        <i class="fas fa-exclamation-circle failure-icon"></i>
+        <i class="far fa-check-circle success-icon"></i>
         <div class="error"></div>
       </div>
 
@@ -43,9 +43,9 @@
       <div>
         <label for="password">Password</label>
         <i class="fas fa-lock"></i>
-        <input type="password" name="password" id="password" placeholder="Ola Oluwa">
-        <i class="fas fa-exclamation-circle"></i>
-        <i class="far fa-check-circle"></i>
+        <input type="password" name="password" id="password" placeholder="Password">
+        <i class="fas fa-exclamation-circle failure-icon"></i>
+        <i class="far fa-check-circle success-icon"></i>
         <div class="error"></div>
       </div>
       <button type="submit" id="submit">Submit</button>
