--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <div>
         <label for="email">Email</label>
         <i class="far fa-envelope"></i>
-        <input type="email" name="email" id="email" placeholder="Email">
+        <input type="email" name="email" id="email" placeholder="xyz@gmail.com">
         <i class="fas fa-exclamation-circle failure-icon"></i>
         <i class="far fa-check-circle success-icon"></i>
         <div class="error"></div>
