--- a/index.html
+++ b/index.html
@@ -16,8 +16,34 @@
 </head>
 <body>
   <div class="container">
+    <div class="content">
+      <div class="logo">
+        <img src="image/logo.svg" alt="">
+      </div>
+      <div class="image"></div>
+      <div class="text"></div>
+    </div>
     <form id="form">
-      <div class="title">Get Started</div>
+      <div class="social">
+        <div class="title">Get Started</div>
+        <div class="question">
+          Already have an account? <br>
+          <span>Sign In</span>
+        </div>
+
+        <div class="btn">
+          <div class="btn-1">
+            <img src="https://img.icons8.com/color/30/000000/google-logo.png"/>
+            Sign Up
+          </div>          
+          <div class="btn-2">
+            <img src="https://img.icons8.com/material-sharp/30/ffffff/facebook-circled.png"/>
+            Sign Up
+          </div>          
+        </div>
+
+        <div class="or">Or</div>
+      </div>      
 
       <!-- user name input -->
       <div>
