--- a/index.html
+++ b/index.html
@@ -19,9 +19,12 @@
     <div class="content">
       <div class="logo">
         <img src="image/logo.svg" alt="">
+        <span id="brand-image">rando</span>
       </div>
       <div class="image"></div>
-      <div class="text"></div>
+      <div class="text">
+        Start for free & get<br>attractive offers today!
+      </div>
     </div>
     <form id="form">
       <div class="social">
